--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   font-weight: 400;
   line-height: 20px;
   font-size: 15px;
-  src: url("Roboto-Regular.woff") format("woff");
+  src: url("fonts/Roboto-Regular.woff") format("woff");
   color: white;
 }
 
