--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,19 @@ body {
   padding: 10px;
   margin: 10px;
   color: #f279bd;
+  font-family: Consolas, Lucida Console, Menlo, Monaco, monospace;
 }
 
 .code::before {
   content: "code:";
   display: block;
+}
+
+code {
+  background: #282a36;
+  border-radius: 2px;
+  color: #868d9a;
+  font-family: Consolas, Lucida Console, Menlo, Monaco, monospace;
+
+  padding: 2px 4px;
 }
